@@ -1,3 +1,11 @@
+2010-12-14  KUBO Takehiro  <kubo@jiubao.org>
+	* dist-files, lib/oci8.rb.in, lib/oci8/.document, lib/oci8/properties.rb:
+	    add OCI8.properties to get and set ruby-oci8 global setting.
+	* ext/oci8/bind.c, lib/oci8/bindtype.rb: fix NCHAR support and add
+	    OCI8.properties[:bind_string_as_nchar] to control charset form (CHAR or NCHAR)
+	    when binding string values.
+	    See: http://rubyforge.org/forum/forum.php?thread_id=48838&forum_id=1078
+
 2010-12-04  KUBO Takehiro  <kubo@jiubao.org>
 	* ext/oci8/object.c, ext/oci8/bind.c, lib/oci8/object.rb,
 	  test/test_object.rb: fix a problem to assign NULL bind value
